# async-payment-processing-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 20260713_0001_initial.py  20260716_0002_replace_outbox_publish_index.py
scripts/: __init__.py  smoke_test.py  webhook_receiver.py
src/payment_service/: __init__.py  consumer.py  main.py  messaging.py
src/payment_service/api/: __init__.py  dependencies.py  openapi.py  schemas.py
src/payment_service/api/v1/: __init__.py  payments.py  router.py
src/payment_service/core/: __init__.py  config.py  constants.py  logging.py
src/payment_service/db/: __init__.py  base.py  session.py
src/payment_service/domain/: __init__.py  enums.py  events.py  models.py
src/payment_service/services/: __init__.py  exceptions.py  gateway.py  outbox.py  payments.py  processor.py  webhooks.py
tests/: __init__.py
tests/integration/: test_compose_flow.py
tests/unit/: __init__.py  conftest.py  test_api.py  test_config.py  test_gateway.py  test_logging.py  test_messaging.py  test_openapi.py  test_outbox.py  test_payment_schemas.py  test_payment_service.py  test_processor.py  test_webhooks.py
