[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "async-payment-processing-service"
version = "0.1.0"
description = "Fault-tolerant asynchronous payment processing service"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "faststream[rabbit]>=0.6,<1",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy[asyncio]>=2.0.41,<3",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.16,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.0,<2",
    "pytest-cov>=6.2,<7",
    "ruff>=0.12,<1",
]

[project.scripts]
payment-consumer = "payment_service.consumer:run"

[tool.hatch.build.targets.wheel]
packages = ["src/payment_service"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires PostgreSQL and RabbitMQ",
]

[tool.coverage.run]
branch = true
source = ["payment_service"]
omit = [
    "src/payment_service/consumer.py",
    "src/payment_service/main.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]
ignore = ["B008", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["faststream.*"]
ignore_missing_imports = true
